--- a/main.css
+++ b/main.css
@@ -5,35 +5,35 @@
 }
 header
 {
-    height: 100px;
+    height: 8vw;
     width: 100vw;
     background-color: #6E85B7;
     margin: 0 auto;
 }
 #avatar
 {
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-    margin-left: 200px;
+    width: 8vw;
+    height: 8vw;
+    border-radius: 8vw;
+    margin-left: 15vw;
 }
 #tieude
 {
     float: right;
-    margin-right: 460px;
-    margin-top: 30px;
-    font-size: 35px;
+    margin-right: 38vw;
+    margin-top: 2.5vw;
+    font-size: 3vw;
 }
 nav
 {
-    height: 50px;
+    height: 4vw;
     width: 100vw;
     background-color: #B2C8DF;
     margin: 0 auto;
 }
 .menu
 {
-    margin-left: 130px;
+    margin-left: 11vw;
 }
 nav ul
 {
@@ -41,10 +41,10 @@ nav ul
 }
 nav ul li{
     float: left;
-    margin: 15px 100px;
+    margin: 2vh 7vw;
 }
 nav ul li a{
-    font-size: large;
+    font-size: 1.5vw;
     color: black;
     text-decoration: none;
 }
@@ -57,23 +57,45 @@ nav ul li a{
 .card
 {
     float: left;
-    height: 500px;
-    width: 400px;
+    height: 40vw;
+    width: 30vw;
     background-color: #DFD3C3;
     margin: 10vh 5vw;
-    border-radius: 70px;
+    border-radius: 5.6vw;
     margin-left: 10vw;
+}
+h3
+{
+    margin-top: 2vw;
+    font-size: 1.2vw;
+}
+h2{
+    margin-top: 2vw;
+    font-size: 1.3vw;
+}
+h1{
+    margin-top: 2vw;
+    font-size: 2.0vw;
 }
 .nut
 {
-    font-size: large;
+    font-size: 1.2vw;
     background-color: #9E7676;
-    width: 250px;
-    height: 50px;
-    margin: 15px 0;
-    border-radius: 100px;
+    width: 20vw;
+    height: 4vw;
+    margin: 1.2vw 0;
+    border-radius: 8vw;
 }
 .nut a{
     color: black;
     text-decoration: none;
+}
+#video
+{
+    width: 27vw;
+    height: 20vw;
+}
+center
+{
+    margin-top: 3vw;
 }
